force-app/main/default/objects/LogEvent__c/LogEvent__c.object-meta.xml
<CustomObject>
    <description>Used for storing information related to log events.</description>
    <label>Log Event</label>
    <nameField>
        <displayFormat>L{0000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>